--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ $Id$
 *********************************************************************
 *SEV PF WHO	DESCRIPTION
 *********************************************************************
+9	KB	Expunge doesn't update folder listing anymore
 9	KB	When retrieving only N our of M messages, Mah. will
 		later say that there are M-N new messages :-(
 9	KB	wxLayout editing glitches & cursor positioning bug
