--- a/TODO
+++ b/TODO
@@ -8,13 +8,18 @@ $Id$
 *********************************************************************
 *SEV PF WHO	DESCRIPTION
 *********************************************************************
-9	KB	Expunge doesn't update folder listing anymore
+9	KB	POP signing off bug
+9	KB	Implement a ProfileBase::GetParent() and functions to
+		enumerate sub-groups.
+9	KB	Do we need FolderView/ComposeView profiles? 
 9	KB	When retrieving only N our of M messages, Mah. will
 		later say that there are M-N new messages :-(
 9	KB	wxLayout editing glitches & cursor positioning bug
 		selections via keyboard still broken
 		speed up wxLayout scrollbar setting, *way* too slow
 		now
+		- deleting wxllist takes ages, calling MoveLines(,-1)
+		  recursively 
 5	KB	for NNTP only count unread/new messages
 4		Change "only retrieve first X messages" dialog box:
 		1. make it more intuitive (yes/no switch)
