--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 (next release) on (date of next release)
 
-19.07.99 VZ: initial support for MH folders
-18.07.99 KB: more async fixes, fixed some race-conditions, MModule dialog almost working
+19.07.99 KB: tear-off menus option added
+18.07.99 KB: more async fixes, fixed some race-conditions, 
+             MModule dialog working
 17.07.99 KB: more async code, non-async compilation no longer supported
              scandoc now produces usable docs, MModule produces listing of modules,
              subscription management
