Sorted folder listings are here eventually. :-) Sooo nice - please test.

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 (next release) on (date of next release)
 
+22.07.99 KB: more MailFolder tidying up, sorting works
 19.07.99 KB: tear-off menus option added
 18.07.99 KB: more async fixes, fixed some race-conditions, 
              MModule dialog working
