Minor fixes and new mailfolder listing generation

--- a/TODO
+++ b/TODO
@@ -21,6 +21,10 @@ $Id$
 		  window? Should speed up things N*(N-1) fold...
 		- scrollbars don't appear immediately in long
 		  composeview messages
+9	KB	mm_list() needs mailfolder to work
+9	KB	message sorting seems buggy
+9	KB	check new mail after startup
+9               initial dialogs (wxConfig errors) show unknown icon
 9	KB	check password prompt in mailfolder
 5	KB	make MailFolder timer react to options change
 5	KB	(optionally, but on by default) expunge deleted messages when
